# AgentArk

./: .dockerignore  .gitignore  ACKNOWLEDGMENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.lowmem  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  VERIFY.md  agentark  agentark.bat  build.ps1  build.sh  deny.toml  docker-compose.dev.yml  docker-compose.lowmem.yml  docker-compose.yml  docker-entrypoint.sh  security_best_practices_report.md
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  issue-first-gate.yml  release.yml  scorecard.yml  security-audit.yml  security.yml
assets/self_evolve/: routing_benchmark_v1.json
bridges/gepa_optimizer/: __init__.py  __main__.py  test_gepa_optimizer.py
bridges/playwright-bridge/: Dockerfile  index.js  manual-login.js  manual-login.test.js  package-lock.json  package.json
bridges/voice-bridge/: Dockerfile  requirements.txt  test_voice_bridge.py
bridges/voice-bridge/voice_bridge/: __init__.py  app.py
bridges/whatsapp-bridge/: package-lock.json  package.json
clients/companion/: README.md
clients/companion/android/: README.md  settings.gradle.kts
clients/companion/custom-device/: README.md  minimal-python-client.py
clients/companion/desktop-agent/: Cargo.toml  README.md
clients/companion/desktop-agent/src/: main.rs
clients/companion/ios/: Package.swift  README.md
clients/companion/protocol/: agentark-companion-v1.schema.json
config/: example.skill_security_policy.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  brand.ts  fonts.css  main.tsx  styles.css  theme.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ActivityFeed.tsx  AgentStatusBar.tsx  AmberCascadesBackground.tsx  ApprovalPromptOverlay.tsx  BackgroundSessionsManager.tsx  BriefingPanel.tsx  BrowserHandoffPage.tsx  BrowserProfilesPanel.tsx  ChannelsControlPanel.tsx  CompanionDevicesPanel.tsx  DevicesControlPanel.tsx  ExtensionPacksPanel.tsx  GoogleWorkspaceAdminPanel.tsx  GoogleWorkspaceSetupGuide.tsx  GuidedTour.tsx  InboxPane.tsx  IntegrationQuickstartPanel.tsx  IntegrationRoutingPanel.tsx  IntegrationsPanel.tsx  LibraryPane.tsx  LiveEventConsole.tsx  MoltbookManager.tsx  NativeWorkspace.tsx  StatCard.tsx  (+24 more)
frontend/tests/: analyticsPageLayout.test.mjs  arkReflectOpportunities.test.mjs  browserHandoffMode.test.mjs  chatLandingPalette.test.mjs  chatLiveProgressVisibility.test.mjs  chatLiveRunArchive.test.mjs  chatRunMetrics.test.mjs  companionPairing.test.mjs  computerPaneFileContent.test.mjs  evolutionPromptLifecycleCopy.test.mjs  evolutionReviewQueue.test.mjs  evolutionReviewQueueHelpers.test.mjs  integrationPanelData.test.mjs  memoryGraph.test.mjs  memoryPageCategories.test.mjs  overviewArkDistillSpark.test.mjs  pageHelpers.test.mjs  runPayloadView.test.mjs  settingsApiKeyClient.test.mjs  settingsIdentityUi.test.mjs  voiceConversation.test.mjs  voiceHistory.test.mjs  voiceMode.test.mjs  voiceStream.test.mjs
scripts/: agentark-release-cli.ps1  build-installer.bat  build-installer.sh  deploy-vps.sh  install.ps1  install.sh  low-memory-build.wslconfig  start.bat  start.sh  test-install.ps1
services/playwright-bridge/: package-lock.json
services/remotion-template/: package-lock.json  package.json  tsconfig.json
services/whatsapp-bridge/: index.js  package-lock.json
src/: branding.rs  cli.rs  lib.rs  main.rs  self_update.rs  sentinel.rs
src/actions/: app.rs  calendar.rs  gmail.rs  google_workspace.rs  lan.rs  mod.rs  research.rs  search.rs  ssh.rs  vercel.rs
src/app/: branding.rs  mod.rs
src/channels/: discord.rs  google_chat.rs  http.rs  imessage.rs  line.rs  matrix.rs  messaging_dispatch.rs  messaging_registry.rs  mod.rs  outbound_rate_limit.rs  outbound_split.rs  qq.rs  signal.rs  slack.rs  teams.rs  telegram.rs  wechat.rs  whatsapp.rs
src/clients/: executor_client.rs  internal_auth.rs  mod.rs  workspace_client.rs
src/core/: action_catalog.rs  agent.rs  agentark_knowledge.rs  artifact_hygiene.rs  auth_profiles.rs  automation.rs  autonomy.rs  background_session.rs  browser_profiles.rs  browser_session.rs  capability_router.rs  companion.rs  config.rs  connect_flow.rs  connector.rs  data_contract.rs  data_lifecycle.rs  document_search.rs  email_delivery.rs  embeddings.rs  execution.rs  gateway.rs  gateway_ops.rs  integration_auth.rs  integration_sync.rs  intent.rs  learning.rs  live_run.rs  llm.rs  llm_context_sanitizer.rs  llm_provider.rs  memory_dedup.rs  memory_schema.rs  mod.rs  model_failover.rs  net.rs  observability.rs  orchestra.rs  parallel.rs  pipeline.rs  (+18 more)
src/crypto/: master.rs  mod.rs
src/custom_apis/: mod.rs
src/custom_messaging_channels/: mod.rs
src/docs/: agent_toc.rs  agentark_manual.rs  mod.rs  product_help.rs
src/executor/: mod.rs  protocol.rs  server.rs
src/extension_packs/: mod.rs
src/gui/: app.rs  mod.rs  views.rs
src/hooks/: mod.rs
src/identity/: mod.rs
src/integrations/: browser.rs  calendar.rs  ga4.rs  garmin.rs  github.rs  gsc.rs  home_assistant.rs  lightpanda.rs  media_gen.rs  mem0.rs  mod.rs  moltbook.rs  notion.rs  oauth.rs  onepassword.rs  ordering.rs  places.rs  social_analytics.rs  twilio.rs  twitter.rs  whatsapp.rs  whoop.rs
src/mcp/: client.rs  registry.rs
src/memory/: mod.rs
src/plugins/: registry.rs
src/proofs/: mod.rs
src/runtime/: ark_inspect.rs  file_tools.rs  mod.rs  sandbox.rs  toolsets.rs
src/safety/: mod.rs
src/security/: abuse_tracker.rs  action_guard.rs  capabilities.rs  embedding_classifier.rs  intent_classifier.rs  mod.rs  model_hardening.rs  model_input.rs  normalize.rs  outbound.rs  output_guard.rs  skill_review.rs  tool_args_guard.rs  trust_boundary.rs
src/sentinel/: config.rs  managed_backup.rs  mod.rs  types.rs
src/storage/: encrypted.rs  migrations.rs  mod.rs
src/telemetry/: metrics.rs
src/workspace/: mod.rs  server.rs
tests/: api_core_test.rs  semantic_benchmark_corpus.rs  swarm_api_test.rs
tests/fixtures/: semantic_benchmark.json
(+561 files in other folders)
