[package]
name = "agentark"
version = "0.1.0"
edition = "2021"
authors = ["AgentArk Contributors"]
description = "A secure, self-improving AI agent with cognitive memory, parallel thinking, and sub-agent orchestration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentark-ai/AgentArk"
keywords = ["ai", "agent", "llm", "autonomous", "cognitive"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = ["gui", "telegram", "docker", "ssh"]
gui = ["eframe", "egui", "egui_extras", "image"]
telegram = ["teloxide"]
docker = ["bollard"]
ssh = ["russh", "russh-keys"]
local-llm = ["llama-cpp-2"]
tls = ["axum-server", "rcgen"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# GUI (egui - immediate mode, cross-platform)
eframe = { version = "0.29", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true, features = ["image"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# HTTP server (local only, no websockets)
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"

# IPC (Unix sockets / Named pipes)
interprocess = "2"

# Telegram
teloxide = { version = "0.13", optional = true, features = ["macros"] }

# LLM clients
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Local LLM (optional)
llama-cpp-2 = { version = "0.1", optional = true }

# WASM sandbox runtime
wasmtime = "41"

# Docker support
bollard = { version = "0.18", optional = true }

# Optional TLS support
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rcgen = { version = "0.13", optional = true }

# Cryptography (for DID, VCs, execution proofs, data encryption)
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = "2"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
bs58 = "0.5"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"

# Database ORM (SeaORM with SQLite)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }


# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.13"
tokio-cron-scheduler = "0.13"

# Filesystem snapshots (for transactional rollback)
reflink-copy = "0.1"
walkdir = "2"
notify = "7"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI & config
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
pdf-extract = "0.7"
zip = "2"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"
url = "2"

# SSH (remote server execution)
russh = { version = "0.57", optional = true }
russh-keys = { version = "0.46", optional = true }

# Clipboard support
arboard = "3"

# Expression evaluation (for safety rules)
evalexpr = "11"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
tokio-test = "0.4"

[[bin]]
name = "agentark"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
