[package]
name = "agentark"
version = "0.1.0"
edition = "2021"
authors = ["AgentArk Contributors"]
description = "A secure private AI assistant for daily use with memory, self-improving autonomy, and safe automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentark-ai/AgentArk"
keywords = ["ai", "assistant", "autonomous", "automation", "self-improving"]
categories = ["development-tools", "command-line-utilities"]
autobins = false
autotests = false

[features]
default = ["telegram", "docker", "ssh"]
gui = ["eframe", "egui", "egui_extras", "image"]
telegram = ["teloxide"]
docker = ["bollard"]
ssh = ["russh"]
local-llm = ["llama-cpp-2"]
tls = ["axum-server", "rcgen"]
live-smoke-tests = []
db-tests = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# GUI (egui - immediate mode, cross-platform)
eframe = { version = "0.29", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true, features = ["image"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# HTTP server (local only, no websockets)
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"

# IPC (Unix sockets / Named pipes)
interprocess = "2"

# Telegram
teloxide = { version = "0.13", optional = true, features = ["macros"] }

# LLM clients
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
fastembed = "5"

# Local LLM (optional)
llama-cpp-2 = { version = "0.1", optional = true }

# WASM sandbox runtime
wasmtime = "42"

# Docker support
bollard = { version = "0.20.2", optional = true }

# Optional TLS support
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }
rcgen = { version = "0.13", optional = true }

# Cryptography (for DID, VCs, execution proofs, data encryption)
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = "2"
sha2 = { version = "0.11.0", features = ["oid"] }
blake3 = "1"
rand = "0.10.1"
bs58 = "0.5"
aes-gcm = "0.10"
argon2 = "0.5"
ring = "0.17.14"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Database ORM (SeaORM with PostgreSQL)
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-vector"] }
sea-orm-migration = { version = "1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"] }


# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.13"

# Filesystem snapshots (for transactional rollback)
reflink-copy = "0.1"
walkdir = "2"
notify = "7"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI & config
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
pdf-extract = "0.7"
zip = "8.5.1"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"
url = "2"
unicode-normalization = "0.1"
scraper = "0.20"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

# SSH (remote server execution)
russh = { version = "0.60.1", optional = true, default-features = false, features = ["flate2", "ring"] }

# Clipboard support
arboard = "3"

# Expression evaluation (for safety rules)
evalexpr = "11"
tempfile = "3"
crossterm = "0.28"

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4"

[[bin]]
name = "agentark"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "agentark_embed_server"
path = "src/bin/agentark_embed_server.rs"
test = false
bench = false

[[bin]]
name = "prefetch_embeddings"
path = "src/bin/prefetch_embeddings.rs"
test = false
bench = false

[[test]]
name = "api_core_test"
path = "tests/api_core_test.rs"
required-features = ["live-smoke-tests"]

[[test]]
name = "swarm_api_test"
path = "tests/swarm_api_test.rs"
required-features = ["live-smoke-tests"]

[[test]]
name = "semantic_benchmark_corpus"
path = "tests/semantic_benchmark_corpus.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Dev-fast: same shape as release (panic=abort, no debug bloat) but with the
# knobs that make incremental rebuilds cheap. Used by docker-compose.dev.yml so
# `scripts\start.bat build` reuses cargo fingerprints across rebuilds. The
# published image still uses [profile.release]; this profile is only selected
# by local dev compose overrides.
[profile.dev-fast]
inherits = "release"
lto = false
codegen-units = 16
incremental = true
opt-level = 1
strip = false
